# Shapez-2-Tools

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml
crates/router/: Cargo.toml
crates/router/src/: lib.rs  (+2 more)
data/: ICONS.md  platforms.json
data/fonts/: license.txt  readme.txt
data/reference/: balancer_12_to_12.spz2bp  cutter_12_to_24.spz2bp  cutters_8_pinwheel.spz2bp  full_belt_rotate_180.spz2bp  full_belt_rotate_180_font.spz2bp  full_belt_rotate_ccw.spz2bp  full_belt_rotate_ccw_font.spz2bp  full_belt_rotate_cw.spz2bp  full_belt_rotate_cw_font.spz2bp  painters_4_mirror.spz2bp  painters_4_normal.spz2bp  quarter_destroy_west_half.spz2bp  quarter_rotate_180.spz2bp  quarter_rotate_ccw.spz2bp  quarter_rotate_cw.spz2bp  stackers_bent_8.spz2bp  stackers_straight_4.spz2bp  swap_diagonal.spz2bp  swap_diagonal_4pair_2x2.spz2bp  swappers_4_pinwheel.spz2bp
docs/: QUESTIONS.md  generator-spec.md  machines.md  research.md  route-crossing-plan.md  route-only-spec.md
scripts/: route_custom.py  sweep_routing.py
src/shapez2_tools/: __init__.py  _rust_bridge.py  blueprint.py  cli.py  font.py  generator.py  interpret.py  lift.py  pathfinder.py  place.py  route.py  route_only.py  router.py  shapes.py  synth.py  viz.py
tests/: conftest.py  test_blueprint.py  test_corpus.py  test_font.py  test_generator.py  test_interpret.py  test_lift.py  test_lift_3d.py  test_netlist.py  test_pathfinder.py  test_place.py  test_route.py  test_route_only.py  test_router.py  test_shapes.py  test_synth.py  test_validate.py  wp_n_reroute_experiment.py
