[project]
name = "shapez2-tools"
version = "0.1.0"
description = "Tools for reading/writing Shapez 2 blueprint files"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "ortools>=9",
]

[project.optional-dependencies]
dev = [
    "pillow>=12.2.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
shapez2 = "shapez2_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shapez2_tools"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/shapez2_tools/font.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
